# tiqn_backend

.github/workflows/: ci.yml
core_api/: .envrc.example  CONVEX_CONNECTION.md  COORDINATE_WITH_TEAM.md  HOW_IT_WORKS.md  INTEGRATION_SUMMARY.md  README.md  REALTIME_UPDATES.md  SCHEMA_MAPPING.md  SCHEMA_UPDATES.md  entrypoint.sh  pyproject.toml
core_api/alembic/: env.py
core_api/src/: config.py  core.py  main.py  schemas.py
core_api/src/services/: canonical.py  convex_db.py  session.py  transcription.py
core_api/src/twilio_stream/: routes.py
infra/core_api/: Dockerfile  README.md  entrypoint.sh  pyproject.toml  ruff.toml
infra/core_api/src/: database.py
